Added Language change

--- a/src/main/resources/translations_en_En.properties
+++ b/src/main/resources/translations_en_En.properties
@@ -1,17 +1,30 @@
+brand=<b>Brand</b>
 cargos=Cargos
+cars=Cars
+carStatuses=Car statuses
+dispatchers=Dispatchers
 distance=<b>Distance</b>
+drivers=Drivers
 endDate=<b>End date</b>
 endPoint=<b>Where</b>
 endTime=<b>End time</b>
+first_name=<b>First name</b>
 fuelUsed=<b>Fuel used</b>
 idCar=<b>Car</b>
 idCargo=<b>Cargo</b>
 idDispatcher=<b>Dispatcher</b>
 idDriver=<b>Driver</b>
+idStatus=<b>Car status</b>
 insuranceNumber=<b>Insurance number</b>
 invoiceNumber=<b>Invoice number</b>
+language=Language
+last_name=<b>Last name</b>
+mileage=<b>Mileage</b>
 nameCargo=<b>Cargo name </b>
+number=<b>Number</b>
 price=<b>Price</b>
+second_name=<b>Second name</b>
+selectLanguage=Select language
 startDate=<b>Start date</b>
 startPoint=<b>From</b>
 startTime=<b>Start time</b>
