--- a/src/main/resources/translations_ru_Ru.properties
+++ b/src/main/resources/translations_ru_Ru.properties
@@ -1,17 +1,30 @@
+brand=<b>Марка</b>
 cargos=Грузы
+cars=Автомобили
+carStatuses=Статусы автомобилей
+dispatchers=Диспетчеры
 distance=<b>Расстояние</b>
+drivers=Водители
 endDate=<b>Дата окончания</b>
 endPoint=<b>Куда</b>
 endTime=<b>Время окончания</b>
+first_name=<b>Имя</b>
 fuelUsed=<b>Расход топлива</b>
 idCar=<b>Автомобиль</b>
 idCargo=<b>Груз</b>
 idDispatcher=<b>Диспетчер</b>
 idDriver=<b>Водитель</b>
+idStatus=<b>Статус автомобиля</b>
 insuranceNumber=<b>Номер страховки</b>
 invoiceNumber=<b>Товарно-транспортная накладная</b>
+language=Язык
+last_name=<b>Фамилия</b>
+mileage=<b>Пробег</b>
 nameCargo=<b>Наименование груза</b>
+number=<b>Номер</b>
 price=<b>Цена</b>
+second_name=<b>Отчество</b>
+selectLanguage=Выбрать язык
 startDate=<b>Дата старта</b>
 startPoint=<b>Откуда</b>
 startTime=<b>Время старта</b>
