Added Bootstrap for first page

--- a/src/main/resources/translations_en_En.properties
+++ b/src/main/resources/translations_en_En.properties
@@ -3,10 +3,10 @@ cargos=Cargos
 cars=Cars
 carStatuses=Car statuses
 dispatchers=Dispatchers
-distance=<b>Distance</b>
+distance=Distance
 drivers=Drivers
 endDate=<b>End date</b>
-endPoint=<b>Where</b>
+endPoint=Where
 endTime=<b>End time</b>
 first_name=<b>First name</b>
 fuelUsed=<b>Fuel used</b>
@@ -23,9 +23,10 @@ mileage=<b>Mileage</b>
 nameCargo=<b>Cargo name </b>
 number=<b>Number</b>
 price=<b>Price</b>
+programname=Program for cargo transportation management
 second_name=<b>Second name</b>
 selectLanguage=Select language
 startDate=<b>Start date</b>
-startPoint=<b>From</b>
-startTime=<b>Start time</b>
+startPoint=From
+startTime=Start time
 trips=Trips
