--- a/src/main/resources/translations_ru_Ru.properties
+++ b/src/main/resources/translations_ru_Ru.properties
@@ -3,10 +3,10 @@ cargos=Грузы
 cars=Автомобили
 carStatuses=Статусы автомобилей
 dispatchers=Диспетчеры
-distance=<b>Расстояние</b>
+distance=Расстояние
 drivers=Водители
 endDate=<b>Дата окончания</b>
-endPoint=<b>Куда</b>
+endPoint=Куда
 endTime=<b>Время окончания</b>
 first_name=<b>Имя</b>
 fuelUsed=<b>Расход топлива</b>
@@ -23,9 +23,10 @@ mileage=<b>Пробег</b>
 nameCargo=<b>Наименование груза</b>
 number=<b>Номер</b>
 price=<b>Цена</b>
+programname=Программа для управления грузоперевозками
 second_name=<b>Отчество</b>
 selectLanguage=Выбрать язык
 startDate=<b>Дата старта</b>
-startPoint=<b>Откуда</b>
-startTime=<b>Время старта</b>
+startPoint=Откуда
+startTime=Время старта
 trips=Поездки
