Added Spring Security

--- a/src/main/resources/translations_ru_Ru.properties
+++ b/src/main/resources/translations_ru_Ru.properties
@@ -1,32 +1,32 @@
-brand=<b>Марка</b>
+brand=Марка
 cargos=Грузы
 cars=Автомобили
 carStatuses=Статусы автомобилей
 dispatchers=Диспетчеры
 distance=Расстояние
 drivers=Водители
-endDate=<b>Дата окончания</b>
+endDate=Дата окончания
 endPoint=Куда
-endTime=<b>Время окончания</b>
-first_name=<b>Имя</b>
-fuelUsed=<b>Расход топлива</b>
-idCar=<b>Автомобиль</b>
-idCargo=<b>Груз</b>
-idDispatcher=<b>Диспетчер</b>
-idDriver=<b>Водитель</b>
-idStatus=<b>Статус автомобиля</b>
-insuranceNumber=<b>Номер страховки</b>
-invoiceNumber=<b>Товарно-транспортная накладная</b>
+endTime=Время окончания
+first_name=Имя
+fuelUsed=Расход топлива
+idCar=Автомобиль
+idCargo=Груз
+idDispatcher=Диспетчер
+idDriver=Водитель
+idStatus=Статус автомобиля
+insuranceNumber=Номер страховки
+invoiceNumber=Товарно-транспортная накладная
 language=Язык
-last_name=<b>Фамилия</b>
-mileage=<b>Пробег</b>
-nameCargo=<b>Наименование груза</b>
-number=<b>Номер</b>
-price=<b>Цена</b>
+last_name=Фамилия
+mileage=Пробег
+nameCargo=Наименование груза
+number=Номер
+price=Цена
 programname=Программа для управления грузоперевозками
-second_name=<b>Отчество</b>
+second_name=Отчество
 selectLanguage=Выбрать язык
-startDate=<b>Дата старта</b>
+startDate=Дата старта
 startPoint=Откуда
 startTime=Время старта
 trips=Поездки
