--- a/src/main/resources/translations_en_En.properties
+++ b/src/main/resources/translations_en_En.properties
@@ -1,32 +1,32 @@
-brand=<b>Brand</b>
+brand=Brand
 cargos=Cargos
 cars=Cars
 carStatuses=Car statuses
 dispatchers=Dispatchers
 distance=Distance
 drivers=Drivers
-endDate=<b>End date</b>
+endDate=End date
 endPoint=Where
-endTime=<b>End time</b>
-first_name=<b>First name</b>
-fuelUsed=<b>Fuel used</b>
-idCar=<b>Car</b>
-idCargo=<b>Cargo</b>
-idDispatcher=<b>Dispatcher</b>
-idDriver=<b>Driver</b>
-idStatus=<b>Car status</b>
-insuranceNumber=<b>Insurance number</b>
-invoiceNumber=<b>Invoice number</b>
+endTime=End time
+first_name=First name
+fuelUsed=Fuel used
+idCar=Car
+idCargo=Cargo
+idDispatcher=Dispatcher
+idDriver=Driver
+idStatus=Car status
+insuranceNumber=Insurance number
+invoiceNumber=Invoice number
 language=Language
-last_name=<b>Last name</b>
-mileage=<b>Mileage</b>
-nameCargo=<b>Cargo name </b>
-number=<b>Number</b>
-price=<b>Price</b>
+last_name=Last name
+mileage=Mileage
+nameCargo=Cargo name
+number=Number
+price=Price
 programname=Program for cargo transportation management
-second_name=<b>Second name</b>
+second_name=Second name
 selectLanguage=Select language
-startDate=<b>Start date</b>
+startDate=Start date
 startPoint=From
 startTime=Start time
 trips=Trips
