Added form registration

--- a/src/main/resources/translations_en_En.properties
+++ b/src/main/resources/translations_en_En.properties
@@ -8,6 +8,8 @@ drivers=Drivers
 endDate=End date
 endPoint=Where
 endTime=End time
+errors.user.lastName=From 2 to 20 symbols
+errors.user.password=password must contain at least 1 uppercase English letter, number and sign
 first_name=First name
 fuelUsed=Fuel used
 idCar=Car
