--- a/src/main/resources/translations_ru_Ru.properties
+++ b/src/main/resources/translations_ru_Ru.properties
@@ -8,6 +8,8 @@ drivers=Водители
 endDate=Дата окончания
 endPoint=Куда
 endTime=Время окончания
+errors.user.lastName=От 2 до 20 символов
+errors.user.password=пароль должен содержать хотя бы 1 большую английскую букву, цифру и знак
 first_name=Имя
 fuelUsed=Расход топлива
 idCar=Автомобиль
