Added form registration

--- a/src/main/resources/translations_en_En.properties
+++ b/src/main/resources/translations_en_En.properties
@@ -21,9 +21,12 @@ insuranceNumber=Insurance number
 invoiceNumber=Invoice number
 language=Language
 last_name=Last name
+login=Login
 mileage=Mileage
+name=Name
 nameCargo=Cargo name
 number=Number
+password=Password
 price=Price
 programname=Program for cargo transportation management
 second_name=Second name
