--- a/src/main/resources/translations_ru_Ru.properties
+++ b/src/main/resources/translations_ru_Ru.properties
@@ -21,9 +21,12 @@ insuranceNumber=Номер страховки
 invoiceNumber=Товарно-транспортная накладная
 language=Язык
 last_name=Фамилия
+login=Логин
 mileage=Пробег
+name=Имя
 nameCargo=Наименование груза
 number=Номер
+password=Пароль
 price=Цена
 programname=Программа для управления грузоперевозками
 second_name=Отчество
