--- a/src/main/resources/translations_en_En.properties
+++ b/src/main/resources/translations_en_En.properties
@@ -8,8 +8,10 @@ drivers=Drivers
 endDate=End date
 endPoint=Where
 endTime=End time
+enter=Enter
 errors.user.lastName=From 2 to 20 symbols
 errors.user.password=password must contain at least 1 uppercase English letter, number and sign
+exit=Exit
 first_name=First name
 fuelUsed=Fuel used
 idCar=Car
@@ -19,6 +21,8 @@ idDriver=Driver
 idStatus=Car status
 insuranceNumber=Insurance number
 invoiceNumber=Invoice number
+isActive=Is active?
+isInTrip=Is in trip?
 language=Language
 last_name=Last name
 login=Login
@@ -29,9 +33,12 @@ number=Number
 password=Password
 price=Price
 programname=Program for cargo transportation management
+register=Register
+registerDispatcher=Register new dispatcher
 second_name=Second name
 selectLanguage=Select language
 startDate=Start date
 startPoint=From
 startTime=Start time
+statuses=Statuses
 trips=Trips
