--- a/src/main/resources/translations_ru_Ru.properties
+++ b/src/main/resources/translations_ru_Ru.properties
@@ -8,8 +8,10 @@ drivers=Водители
 endDate=Дата окончания
 endPoint=Куда
 endTime=Время окончания
+enter=Войти
 errors.user.lastName=От 2 до 20 символов
 errors.user.password=пароль должен содержать хотя бы 1 большую английскую букву, цифру и знак
+exit=Выйти
 first_name=Имя
 fuelUsed=Расход топлива
 idCar=Автомобиль
@@ -19,6 +21,8 @@ idDriver=Водитель
 idStatus=Статус автомобиля
 insuranceNumber=Номер страховки
 invoiceNumber=Товарно-транспортная накладная
+isActive=Активен?
+isInTrip=В поездке?
 language=Язык
 last_name=Фамилия
 login=Логин
@@ -29,9 +33,12 @@ number=Номер
 password=Пароль
 price=Цена
 programname=Программа для управления грузоперевозками
+register=Зарегистрировать
+registerDispatcher=Зарегистрировать нового диспетчера
 second_name=Отчество
 selectLanguage=Выбрать язык
 startDate=Дата старта
 startPoint=Откуда
 startTime=Время старта
+statuses=Статусы
 trips=Поездки
