limited visibility for unauthorized

--- a/src/main/resources/translations_en_En.properties
+++ b/src/main/resources/translations_en_En.properties
@@ -26,11 +26,13 @@ isInTrip=Is in trip?
 language=Language
 last_name=Last name
 login=Login
+loginforlogin=<b>Login</b>
 mileage=Mileage
 name=Name
 nameCargo=Cargo name
 number=Number
 password=Password
+passwordforlogin=<b>Password</b>
 price=Price
 programname=Program for cargo transportation management
 register=Register
