--- a/src/main/resources/translations_ru_Ru.properties
+++ b/src/main/resources/translations_ru_Ru.properties
@@ -26,11 +26,13 @@ isInTrip=В поездке?
 language=Язык
 last_name=Фамилия
 login=Логин
+loginforlogin=<b>Логин</b>
 mileage=Пробег
 name=Имя
 nameCargo=Наименование груза
 number=Номер
 password=Пароль
+passwordforlogin=<b>Пароль</b>
 price=Цена
 programname=Программа для управления грузоперевозками
 register=Зарегистрировать
