add registration form for driver

--- a/src/main/resources/translations_en_En.properties
+++ b/src/main/resources/translations_en_En.properties
@@ -9,6 +9,7 @@ endDate=End date
 endPoint=Where
 endTime=End time
 enter=Enter
+errors.user.isInTrip=0 or 1
 errors.user.lastName=From 2 to 20 symbols
 errors.user.password=password must contain at least 1 uppercase English letter, number and sign
 exit=Exit
@@ -37,6 +38,7 @@ price=Price
 programname=Program for cargo transportation management
 register=Register
 registerDispatcher=Register new dispatcher
+registerDriver=Register new driver
 second_name=Second name
 selectLanguage=Select language
 startDate=Start date
