--- a/src/main/resources/translations_ru_Ru.properties
+++ b/src/main/resources/translations_ru_Ru.properties
@@ -9,6 +9,7 @@ endDate=Дата окончания
 endPoint=Куда
 endTime=Время окончания
 enter=Войти
+errors.user.isInTrip=0 или 1
 errors.user.lastName=От 2 до 20 символов
 errors.user.password=пароль должен содержать хотя бы 1 большую английскую букву, цифру и знак
 exit=Выйти
@@ -37,6 +38,7 @@ price=Цена
 programname=Программа для управления грузоперевозками
 register=Зарегистрировать
 registerDispatcher=Зарегистрировать нового диспетчера
+registerDriver=Зарегистрировать нового водителя
 second_name=Отчество
 selectLanguage=Выбрать язык
 startDate=Дата старта
