Added link DELETE

--- a/src/main/resources/translations_ru_Ru.properties
+++ b/src/main/resources/translations_ru_Ru.properties
@@ -11,6 +11,7 @@ endTime=Время окончания
 enter=Войти
 errors.user.isInTrip=0 или 1
 errors.user.lastName=От 2 до 20 символов
+errors.user.brand=От 2 до 20 символов
 errors.user.password=пароль должен содержать хотя бы 1 большую английскую букву, цифру и знак
 exit=Выйти
 first_name=Имя
@@ -37,6 +38,7 @@ passwordforlogin=<b>Пароль</b>
 price=Цена
 programname=Программа для управления грузоперевозками
 register=Зарегистрировать
+registerCar=Зарегистрировать новый автомобиль
 registerDispatcher=Зарегистрировать нового диспетчера
 registerDriver=Зарегистрировать нового водителя
 second_name=Отчество
@@ -46,3 +48,5 @@ startPoint=Откуда
 startTime=Время старта
 statuses=Статусы
 trips=Поездки
+delete=Удалить
+edit=Изменить
