--- a/src/main/resources/translations_en_En.properties
+++ b/src/main/resources/translations_en_En.properties
@@ -11,6 +11,7 @@ endTime=End time
 enter=Enter
 errors.user.isInTrip=0 or 1
 errors.user.lastName=From 2 to 20 symbols
+errors.user.brand=From 2 to 20 symbols
 errors.user.password=password must contain at least 1 uppercase English letter, number and sign
 exit=Exit
 first_name=First name
@@ -37,6 +38,7 @@ passwordforlogin=<b>Password</b>
 price=Price
 programname=Program for cargo transportation management
 register=Register
+registerCar=Register new car
 registerDispatcher=Register new dispatcher
 registerDriver=Register new driver
 second_name=Second name
@@ -46,3 +48,5 @@ startPoint=From
 startTime=Start time
 statuses=Statuses
 trips=Trips
+delete=Delete
+edit=Edit
