Added editor cargos

--- a/src/main/resources/translations_en_En.properties
+++ b/src/main/resources/translations_en_En.properties
@@ -38,7 +38,7 @@ passwordforlogin=<b>Password</b>
 price=Price
 programname=Program for cargo transportation management
 register=Register
-registerCar=Register new car
+addNewCar=Add new car
 registerDispatcher=Register new dispatcher
 registerDriver=Register new driver
 second_name=Second name
@@ -52,3 +52,5 @@ delete=Delete
 edit=Edit
 editCar=Edit car
 id=Id
+addCargo=Add cargo
+editCargo=Edit cargo
