--- a/src/main/resources/translations_ru_Ru.properties
+++ b/src/main/resources/translations_ru_Ru.properties
@@ -38,7 +38,8 @@ passwordforlogin=<b>Пароль</b>
 price=Цена
 programname=Программа для управления грузоперевозками
 register=Зарегистрировать
-registerCar=Зарегистрировать новый автомобиль
+addNewCar=Добавить новый автомобиль
+registerCar=Добавить новый автомобиль
 registerDispatcher=Зарегистрировать нового диспетчера
 registerDriver=Зарегистрировать нового водителя
 second_name=Отчество
@@ -52,3 +53,5 @@ delete=Удалить
 edit=Изменить
 editCar=Редактировать данные автомобиля
 id=Id
+addCargo=Добавить груз
+editCargo=Изменить груз
