Added editor trips

--- a/src/main/resources/translations_en_En.properties
+++ b/src/main/resources/translations_en_En.properties
@@ -16,7 +16,7 @@ errors.user.password=password must contain at least 1 uppercase English letter, 
 exit=Exit
 first_name=First name
 fuelUsed=Fuel used
-idCar=Car
+idCar=Сar
 idCargo=Cargo
 idDispatcher=Dispatcher
 idDriver=Driver
@@ -39,6 +39,7 @@ price=Price
 programname=Program for cargo transportation management
 register=Register
 addNewCar=Add new car
+registerCar=Register new car
 registerDispatcher=Register new dispatcher
 registerDriver=Register new driver
 second_name=Second name
@@ -54,3 +55,8 @@ editCar=Edit car
 id=Id
 addCargo=Add cargo
 editCargo=Edit cargo
+addNewTrip=Add new trip
+idDispatcherID=Dispatcher ID
+idDriverID=Driver ID
+idCarID=Car ID
+idCargoID=Cargo ID
