--- a/src/main/resources/translations_ru_Ru.properties
+++ b/src/main/resources/translations_ru_Ru.properties
@@ -55,3 +55,8 @@ editCar=Редактировать данные автомобиля
 id=Id
 addCargo=Добавить груз
 editCargo=Изменить груз
+addNewTrip=Добавить новую поездку
+idDispatcherID=ID диспетчера
+idDriverID=ID водителя
+idCarID=ID автомобиля
+idCargoID=ID груза
