Added editor trips1

--- a/src/main/resources/translations_en_En.properties
+++ b/src/main/resources/translations_en_En.properties
@@ -60,3 +60,4 @@ idDispatcherID=Dispatcher ID
 idDriverID=Driver ID
 idCarID=Car ID
 idCargoID=Cargo ID
+error.password=<h3><b>Invalid username or password!</b></h3>
