--- a/src/main/resources/translations_ru_Ru.properties
+++ b/src/main/resources/translations_ru_Ru.properties
@@ -27,7 +27,7 @@ isActive=Активен?
 isInTrip=В поездке?
 language=Язык
 last_name=Фамилия
-login=Логин
+login=Войти
 loginforlogin=<b>Логин</b>
 mileage=Пробег
 name=Имя
@@ -60,3 +60,4 @@ idDispatcherID=ID диспетчера
 idDriverID=ID водителя
 idCarID=ID автомобиля
 idCargoID=ID груза
+error.password=<h3><b>Неверный логин или пароль!</b></h3>
