before change driver

--- a/src/main/resources/translations_en_En.properties
+++ b/src/main/resources/translations_en_En.properties
@@ -61,3 +61,6 @@ idDriverID=Driver ID
 idCarID=Car ID
 idCargoID=Cargo ID
 error.password=<h3><b>Invalid username or password!</b></h3>
+status=Status
+editStatusCar=Edit car status
+editDriver=Edit driver
