--- a/src/main/resources/translations_ru_Ru.properties
+++ b/src/main/resources/translations_ru_Ru.properties
@@ -27,7 +27,7 @@ isActive=Активен?
 isInTrip=В поездке?
 language=Язык
 last_name=Фамилия
-login=Войти
+login=Логин
 loginforlogin=<b>Логин</b>
 mileage=Пробег
 name=Имя
@@ -61,3 +61,6 @@ idDriverID=ID водителя
 idCarID=ID автомобиля
 idCargoID=ID груза
 error.password=<h3><b>Неверный логин или пароль!</b></h3>
+status=Статус
+editStatusCar=Изменить статус машины
+editDriver=Изменить водителя
