added edit Dispatchers

--- a/src/main/resources/translations_en_En.properties
+++ b/src/main/resources/translations_en_En.properties
@@ -64,3 +64,4 @@ error.password=<h3><b>Invalid username or password!</b></h3>
 status=Status
 editStatusCar=Edit car status
 editDriver=Edit driver
+editDispatcher=Edit dispatcher
