--- a/src/main/resources/translations_ru_Ru.properties
+++ b/src/main/resources/translations_ru_Ru.properties
@@ -64,3 +64,4 @@ error.password=<h3><b>Неверный логин или пароль!</b></h3>
 status=Статус
 editStatusCar=Изменить статус машины
 editDriver=Изменить водителя
+editDispatcher=Изменить диспетчера
