--- a/src/main/resources/translations_ru_Ru.properties
+++ b/src/main/resources/translations_ru_Ru.properties
@@ -65,3 +65,4 @@ status=Статус
 editStatusCar=Изменить статус машины
 editDriver=Изменить водителя
 editDispatcher=Изменить диспетчера
+editTrip=Изменить поездку
